@@ -5,7 +5,7 @@
 \usage{fetchSCAN(req)}
 
 \arguments{
-  \item{req}{a vector of named characters, e.g. 
+  \item{req}{a vector of named characters or list of named characters, e.g. 
   c(intervalType=' View Historic ', report='STO', timeseries='Daily', 
 format='copy', sitenum='2072', interval='YEAR', year='2011', month='CY')}
 }
